--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ baseURL = 'https://augustinechiajh.github.io/resume-site/'
 languageCode = 'en-us'
 title = 'Your Name - Resume'
 theme = 'PaperMod'
-publishDir = 'public
+publishDir = 'public'
