--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -163,3 +163,7 @@ sharing = true
     api_key = ""
     index_name = ""
     show_logo = false
+
+# Custom Params
+[params]
+  custom_css = ["css/custom.css"]
