--- a/data/themes/ocean.toml
+++ b/data/themes/ocean.toml
@@ -5,10 +5,12 @@ name = "Ocean"
 light = true
 
 # Primary
-primary = "#3f51b5"
+# primary = "#3f51b5"
+primary = "#1E5288"
 
 # Menu
-menu_primary = "#3f51b5" # 500
+# menu_primary = "#3f51b5" # 500
+menu_primary = "#1E5288"
 menu_text = "#fff"
 menu_text_active = "#8c9eff" # A100
 menu_title = "#fff"
