--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,24 +9,29 @@
   weight = 10
 
 [[main]]
+  name = "About Me"
+  url = "#about"
+  weight = 30
+
+[[main]]
   name = "Posts"
   url = "#posts"
-  weight = 20
+  weight = 30
 
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
-
-[[main]]
-  name = "Publications"
-  url = "#publications"
   weight = 40
 
-[[main]]
-  name = "Courses"
-  url = "courses/"
-  weight = 50
+# [[main]]
+#   name = "Publications"
+#   url = "#publications"
+#   weight = 40
+
+# [[main]]
+#   name = "Courses"
+#   url = "courses/"
+#   weight = 50
 
 [[main]]
   name = "Contact"
