--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,7 +5,7 @@
 
 [[main]]
   name = "Home"
-  url = "#about"
+  url = "#hero"
   weight = 10
 
 [[main]]
@@ -13,10 +13,10 @@
   url = "#about"
   weight = 30
 
-[[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 30
+# [[main]]
+#   name = "Posts"
+#   url = "#posts"
+#   weight = 30
 
 [[main]]
   name = "Projects"
@@ -57,5 +57,5 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[main]]
 #    name = "CV"
-#    url = "files/cv.pdf"
+#    url = "files/CV-ChiaJiHongAugustine.pdf"
 #    weight = 70
