--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -61,7 +61,12 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
-      
+
+      - name: List built authors pages
+        run: |
+          echo "Files in public/authors:"
+          find ./public/authors -type f
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
