--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -11,6 +11,11 @@
 [[main]]
   name = "About Me"
   url = "authors/augustine-chia"
+  weight = 20
+
+[[main]]
+  name = "Experience"
+  url = "#experience"
   weight = 30
 
 # [[main]]
